@@ -950,6 +950,21 @@ int fileio(int op, char * filename, FILEFMT format,
   if (rc < 0)
     return -1;
 
+  #if defined(__CYGWIN__)
+  /* Open Raw Binary format in binary mode on Windows.*/
+  if(format == FMT_RBIN)
+  {
+      if(fio.op == FIO_READ)
+      {
+          fio.mode = "rb";
+      }
+      if(fio.op == FIO_WRITE)
+      {
+          fio.mode = "wb";
+      }
+  }
+  #endif
+
   /* point at the requested memory buffer */
   buf = mem->buf;
   if (fio.op == FIO_READ)
